--- a/Module Work/Resources/data-12-4-3/data-12-4-3-resources/index.html
+++ b/Module Work/Resources/data-12-4-3/data-12-4-3-resources/index.html
@@ -7,19 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <style>
-    .jumbotron {
-    background-image: url("biology2.jpg");
-    background-size: 100% 100%;
-    text-align: center;
-    color: rgb(0, 255, 38);
-    }
-</style>
-
 </head>
 
 <body>
-    <div class="container">
+
+  <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>Belly Button Biodiversity Dashboard</h1>
@@ -56,7 +48,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="charts.js"></script>
+  <script src="plots.js"></script>
 
 </body>
 
